[gd_scene load_steps=5 format=3 uid="uid://c7rubewuhrpnq"]

[ext_resource type="Script" path="res://ui_layer.gd" id="1_434qe"]
[ext_resource type="Theme" uid="uid://dgvrdy2vt7rg3" path="res://world/Themes/KeithsTheme.tres" id="2_5r3ii"]
[ext_resource type="Script" path="res://PlayerValues.gd" id="3_ei5bc"]
[ext_resource type="Script" path="res://Boid Settings.gd" id="4_try2c"]

[node name="ui_layer" type="CanvasLayer"]
script = ExtResource("1_434qe")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5r3ii")

[node name="ControlsMenu" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -202.0
offset_top = -200.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="Control/ControlsMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "C: Camera 
Q: Quit "

[node name="SimulationMenu" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_bottom = 100.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="Control/SimulationMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "
"

[node name="Resources" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 200.0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="Control/Resources"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "
Health"

[node name="PauseMenu" type="TabContainer" parent="Control"]
custom_minimum_size = Vector2(750, 750)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -15.5
offset_right = 250.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1
current_tab = 1

[node name="General Settings" type="VBoxContainer" parent="Control/PauseMenu"]
visible = false
layout_mode = 2
script = ExtResource("3_ei5bc")

[node name="PlayerSpeedSection" type="VBoxContainer" parent="Control/PauseMenu/General Settings"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/PauseMenu/General Settings/PlayerSpeedSection"]
layout_mode = 2
size_flags_horizontal = 4
text = "Player Speed
"

[node name="HSlider" type="HSlider" parent="Control/PauseMenu/General Settings/PlayerSpeedSection"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
min_value = 0.5
max_value = 20.0
step = 0.5
value = 5.5

[node name="Label2" type="Label" parent="Control/PauseMenu/General Settings/PlayerSpeedSection"]
layout_mode = 2
size_flags_horizontal = 4
text = "50
"

[node name="JumpHeightSection" type="VBoxContainer" parent="Control/PauseMenu/General Settings"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/PauseMenu/General Settings/JumpHeightSection"]
layout_mode = 2
size_flags_horizontal = 4
text = "Jump Height
"

[node name="HSlider2" type="HSlider" parent="Control/PauseMenu/General Settings/JumpHeightSection"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
min_value = 0.5
max_value = 20.0
step = 0.5
value = 4.5

[node name="Label3" type="Label" parent="Control/PauseMenu/General Settings/JumpHeightSection"]
layout_mode = 2
size_flags_horizontal = 4
text = "50
"

[node name="SensitivitySection" type="VBoxContainer" parent="Control/PauseMenu/General Settings"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/PauseMenu/General Settings/SensitivitySection"]
layout_mode = 2
size_flags_horizontal = 4
text = "Sensitivity"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PauseMenu/General Settings/SensitivitySection"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HorizontalContainer" type="VBoxContainer" parent="Control/PauseMenu/General Settings/SensitivitySection/HBoxContainer"]
layout_mode = 2

[node name="HorizontalLabel" type="Label" parent="Control/PauseMenu/General Settings/SensitivitySection/HBoxContainer/HorizontalContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Horizontal"

[node name="HorizontalSlider" type="HSlider" parent="Control/PauseMenu/General Settings/SensitivitySection/HBoxContainer/HorizontalContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.1

[node name="HorizontalValue" type="Label" parent="Control/PauseMenu/General Settings/SensitivitySection/HBoxContainer/HorizontalContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "50"

[node name="VerticalContainer" type="VBoxContainer" parent="Control/PauseMenu/General Settings/SensitivitySection/HBoxContainer"]
layout_mode = 2

[node name="VerticalLabel" type="Label" parent="Control/PauseMenu/General Settings/SensitivitySection/HBoxContainer/VerticalContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Vertical"

[node name="VerticalSlider" type="HSlider" parent="Control/PauseMenu/General Settings/SensitivitySection/HBoxContainer/VerticalContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.1

[node name="VerticalValue" type="Label" parent="Control/PauseMenu/General Settings/SensitivitySection/HBoxContainer/VerticalContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "50"

[node name="ButtonKeysSection" type="VBoxContainer" parent="Control/PauseMenu/General Settings"]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="CameraButton" type="Label" parent="Control/PauseMenu/General Settings/ButtonKeysSection"]
layout_mode = 2
size_flags_horizontal = 4
text = "Button Keys"

[node name="OptionButton" type="OptionButton" parent="Control/PauseMenu/General Settings/ButtonKeysSection"]
layout_mode = 2

[node name="ColorfulMode" type="VBoxContainer" parent="Control/PauseMenu/General Settings"]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="ColorfulModeLabel" type="Label" parent="Control/PauseMenu/General Settings/ColorfulMode"]
layout_mode = 2
size_flags_horizontal = 4
text = "Colorful Mode?
"

[node name="ColorfulModeButton" type="CheckButton" parent="Control/PauseMenu/General Settings/ColorfulMode"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ColorfulModeState" type="Label" parent="Control/PauseMenu/General Settings/ColorfulMode"]
layout_mode = 2
size_flags_horizontal = 4
text = "false"

[node name="Boid Settings" type="VBoxContainer" parent="Control/PauseMenu"]
layout_mode = 2
script = ExtResource("4_try2c")

[node name="Speed" type="VBoxContainer" parent="Control/PauseMenu/Boid Settings"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/PauseMenu/Boid Settings/Speed"]
layout_mode = 2
size_flags_horizontal = 4
text = "Speed
"

[node name="HSlider" type="HSlider" parent="Control/PauseMenu/Boid Settings/Speed"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
max_value = 50.0
value = 25.0

[node name="Label2" type="Label" parent="Control/PauseMenu/Boid Settings/Speed"]
layout_mode = 2
size_flags_horizontal = 4
text = "50
"

[node name="Max_Speed" type="VBoxContainer" parent="Control/PauseMenu/Boid Settings"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/PauseMenu/Boid Settings/Max_Speed"]
layout_mode = 2
size_flags_horizontal = 4
text = "Max Speed
"

[node name="HSlider2" type="HSlider" parent="Control/PauseMenu/Boid Settings/Max_Speed"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
value = 50.0

[node name="Label3" type="Label" parent="Control/PauseMenu/Boid Settings/Max_Speed"]
layout_mode = 2
size_flags_horizontal = 4
text = "50
"

[node name="Max_Force" type="VBoxContainer" parent="Control/PauseMenu/Boid Settings"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/PauseMenu/Boid Settings/Max_Force"]
layout_mode = 2
size_flags_horizontal = 4
text = "Max Force
"

[node name="HSlider2" type="HSlider" parent="Control/PauseMenu/Boid Settings/Max_Force"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
value = 15.0

[node name="Label3" type="Label" parent="Control/PauseMenu/Boid Settings/Max_Force"]
layout_mode = 2
size_flags_horizontal = 4
text = "50
"

[node name="Banking" type="VBoxContainer" parent="Control/PauseMenu/Boid Settings"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/PauseMenu/Boid Settings/Banking"]
layout_mode = 2
size_flags_horizontal = 4
text = "Damping
"

[node name="HSlider2" type="HSlider" parent="Control/PauseMenu/Boid Settings/Banking"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
max_value = 1.0
step = 0.1
value = 0.5

[node name="Label3" type="Label" parent="Control/PauseMenu/Boid Settings/Banking"]
layout_mode = 2
size_flags_horizontal = 4
text = "50
"

[node name="Damping" type="VBoxContainer" parent="Control/PauseMenu/Boid Settings"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/PauseMenu/Boid Settings/Damping"]
layout_mode = 2
size_flags_horizontal = 4
text = "Banking
"

[node name="HSlider2" type="HSlider" parent="Control/PauseMenu/Boid Settings/Damping"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
max_value = 1.0
step = 0.1
value = 0.5

[node name="Label3" type="Label" parent="Control/PauseMenu/Boid Settings/Damping"]
layout_mode = 2
size_flags_horizontal = 4
text = "50
"

[node name="Gizmos" type="VBoxContainer" parent="Control/PauseMenu/Boid Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PauseMenu/Boid Settings/Gizmos"]
layout_mode = 2
size_flags_horizontal = 4
text = "Gizmos"

[node name="Button" type="Button" parent="Control/PauseMenu/Boid Settings/Gizmos"]
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
text = "Disabled"
